refactor: StrandardCharsets 클래스가 제공하는 "표준 문자 집합"에 대한 상수 이용